<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:padding="10dp"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:id="@+id/activity_storage_relTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/activity_storage_imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/founding" />

        <TextView
            android:id="@+id/activity_storage_txtTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/activity_storage_imgLogo"
            android:text="@string/activity_prefernce_storage_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_storage_linBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/activity_storage_btnSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onClickSave"
            android:text="@string/activity_sqlite_save" />

        <Button
            android:id="@+id/activity_storage_btnCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onClickCancel"
            android:text="@string/activity_sqlite_cancel" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/activity_storage_linBottom"
        android:layout_below="@+id/activity_storage_relTop"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/activity_storage_txtBookLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingRight="10dp"
                    android:text="@string/activity_prefernce_storage_book_name"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/activity_storage_edtBookName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/activity_prefernce_storage_max_70"
                    android:maxLength="70"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/activity_storage_txtBookAuthor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingRight="10dp"
                    android:text="@string/activity_prefernce_storage_book_author"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/activity_storage_edtBookAuthor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/activity_prefernce_storage_max_70"
                    android:maxLength="70"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/activity_storage_txtBookDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingRight="10dp"
                    android:text="@string/activity_prefernce_storage_desc"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/activity_storage_edtDesc"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="0.5"
                    android:gravity="top"
                    android:hint="@string/activity_sqlite_message_hint"
                    android:maxLength="255"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>